# slopsync

./: .clangd  .gitmodules  CMakeLists.txt  build  watch
include/slopsync/: client.h  schema.h  server.h  shared.h
src/: CMakeLists.txt  base64.h  bitstream.h  client.c  internal.h  schema.c  server.c  shared.c  slopnetd.h  slopsyncd.c
tests/: CMakeLists.txt  main.c  object.c  serialization.c  shared.c  shared.h  world.c
